--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -7,6 +7,9 @@
 var app = angular.module("myShoppingList", []); 
 app.controller("myCtrl", function($scope) {
     $scope.products = ["Milk", "Bread", "Cheese"];
+    $scope.addItem = function () {
+        $scope.products.push($scope.addMe);
+    }    
 });
 </script>
 
@@ -14,9 +17,11 @@ app.controller("myCtrl", function($scope) {
   <ul>
     <li ng-repeat="x in products">{{x}}</li>
   </ul>
+  <input ng-model="addMe">
+  <button ng-click="addItem()">Add</button>
 </div>
 
-<p>So far we have made an HTML list based on the items of an array.</p>
+<p>Write in the input field to add items.</p>
 
 </body>
 </html>
