--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -10,18 +10,21 @@ app.controller("myCtrl", function($scope) {
     $scope.addItem = function () {
         $scope.products.push($scope.addMe);
     }    
+    $scope.removeItem = function (x) {
+        $scope.products.splice(x, 1);
+    }
 });
 </script>
 
 <div ng-app="myShoppingList" ng-controller="myCtrl">
   <ul>
-    <li ng-repeat="x in products">{{x}}</li>
+    <li ng-repeat="x in products">{{x}}<span ng-click="removeItem($index)">×</span></li>
   </ul>
   <input ng-model="addMe">
   <button ng-click="addItem()">Add</button>
 </div>
 
-<p>Write in the input field to add items.</p>
+<p>Click the little x to remove an item from the shopping list.</p>
 
 </body>
 </html>
