--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -8,9 +8,16 @@ var app = angular.module("myShoppingList", []);
 app.controller("myCtrl", function($scope) {
     $scope.products = ["Milk", "Bread", "Cheese"];
     $scope.addItem = function () {
-        $scope.products.push($scope.addMe);
-    }    
+        $scope.errortext = "";
+        if (!$scope.addMe) {return;}        
+        if ($scope.products.indexOf($scope.addMe) == -1) {
+            $scope.products.push($scope.addMe);
+        } else {
+            $scope.errortext = "The item is already in your shopping list.";
+        }
+    }
     $scope.removeItem = function (x) {
+        $scope.errortext = "";    
         $scope.products.splice(x, 1);
     }
 });
@@ -22,9 +29,10 @@ app.controller("myCtrl", function($scope) {
   </ul>
   <input ng-model="addMe">
   <button ng-click="addItem()">Add</button>
+  <p>{{errortext}}</p>
 </div>
 
-<p>Click the little x to remove an item from the shopping list.</p>
+<p>Try to add the same item twice, and you will get an error message.</p>
 
 </body>
 </html>
